Utvider med feltet Stengingsperiode (#7)
* Legger til feltet stengingsperiode og utvider PDF med det

* Rename steningsperiode fra etterAugust10 til etterAugust9

--- a/src/main/resources/handlebars/soknadOverforeDager.hbs
+++ b/src/main/resources/handlebars/soknadOverforeDager.hbs
@@ -52,6 +52,12 @@
     <h2><span>Melding</span></h2>
     <p><b>Hvem skal dagene overføres til?</b> {{navnMottaker}} ({{fnrMottaker}})</p>
     <p><b>Hvor mange dager skal overføres?</b> {{antallDager}}</p>
+    {{#if stengingsperiode}}
+        <p><b>Hvilken periode gjelder overføringen for?</b> {{stengingsperiode}}</p>
+    {{/if}}
+
+
+
 
     <!-- Fosterbarn -->
     {{#if fosterbarnListe.fosterbarn}}
