Utvider meldingen med en liste over barn. Oppdaterer tester Fjerner gamle verdier på meldingen

--- a/src/main/resources/handlebars/meldingDeleOmsorgsdager.hbs
+++ b/src/main/resources/handlebars/meldingDeleOmsorgsdager.hbs
@@ -115,8 +115,8 @@
                 {{/each}}
             {{/if}}
         </p>
-        <p class="sporsmalstekst">Hvor mange omsorgsdager har du brukt etter 1. juli 2020?</p>
-        <p>{{antallDagerBruktEtter1Juli}}</p>
+        <p class="sporsmalstekst">Hvor mange omsorgsdager har du brukt etter 1. juli 2020/ i år?</p>
+        <p>{{antallDagerBruktIÅr}}</p>
     </section>
 
     <!-- MOTTAKER-->
